--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron": "^1.8.3"
+    "electron": "^1.8.3",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
